@@ -1,3 +1,9 @@
+2008-08-06  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>
+       
+	PR 26785
+	* diagnostic.c (permerror_at): New.
+	* toplev.h (permerror_at): Declare.
+	
 2008-08-06  Victor Kaplansky  <victork@il.ibm.com>
 	    Ira Rosen  <irar@il.ibm.com>
 
